--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="login_hint_password">Password</string>
     <string name="login_button_login">Login</string>
 
+    <string name="settings_button_signOut">Sign Out</string>
+
     <string name="userData_server" translatable="false">com.cobble.gogs.app.userData.server</string>
     <string name="userData_protocol" translatable="false">com.cobble.gogs.app.userData.protocol</string>
     <string name="userData_username" translatable="false">com.cobble.gogs.app.userData.username</string>
